[gd_scene load_steps=12 format=2]

[ext_resource path="res://Fonts/yoster.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://UI/Scenes/Menu/Menu.gd" type="Script" id=2]
[ext_resource path="res://UI/Transition/Transition.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI/AnimatedButton/AnimatedButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://Fonts/Font.tres" type="DynamicFont" id=5]

[sub_resource type="Curve" id=15]
_data = [ Vector2( 0.00783476, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.885328, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.829399 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="DynamicFont" id=16]
size = 32
outline_color = Color( 1, 1, 0.921569, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=12]
size = 72
outline_size = 1
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=13]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:rect_scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:rect_scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=14]
resource_name = "Wobble"
length = 4.0
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:rect_scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1.2, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 2, 4 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:rect_scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1.2, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 2, 4 )
}

[sub_resource type="DynamicFont" id=17]
size = 28
outline_size = 2
outline_color = Color( 0.87451, 0.878431, 0.909804, 1 )
font_data = ExtResource( 1 )

[node name="Menu" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ColorRect" type="ColorRect" parent="ParallaxBackground"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0784314, 0.0941176, 0.180392, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Load" type="Timer" parent="."]
one_shot = true

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2( -24, -160 )
amount = 256
lifetime = 45.0
preprocess = 2.0
emission_shape = 2
emission_rect_extents = Vector2( 64, 1 )
direction = Vector2( 1, 1 )
gravity = Vector2( 0, 1 )
initial_velocity = 42.11
initial_velocity_random = 0.2
angular_velocity = 10.0
angular_velocity_random = 1.0
tangential_accel = -2.0
tangential_accel_random = 1.0
scale_amount = 6.0
scale_amount_random = 0.4
scale_amount_curve = SubResource( 15 )
color = Color( 0.913725, 0.94902, 0.956863, 1 )

[node name="Play" parent="." instance=ExtResource( 4 )]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -64.0
margin_top = -184.0
margin_right = 64.0
margin_bottom = -120.0
text = "Play"

[node name="Version" type="Label" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = -48.0
margin_right = 151.0
margin_bottom = -15.0
custom_colors/font_color = Color( 0.929412, 0.956863, 0.964706, 1 )
custom_fonts/font = SubResource( 16 )
text = "^1.0-3"
valign = 1

[node name="Title" type="Label" parent="."]
anchor_right = 1.0
margin_bottom = 128.0
rect_pivot_offset = Vector2( 512, 64 )
custom_colors/font_color = Color( 0.913725, 0.94902, 0.956863, 1 )
custom_fonts/font = SubResource( 12 )
text = "Advent 2022"
align = 1
valign = 1

[node name="Label" type="Label" parent="Title"]
anchor_right = 1.0
margin_top = 112.0
margin_bottom = 145.0
custom_colors/font_color = Color( 0.929412, 0.956863, 0.964706, 1 )
custom_fonts/font = SubResource( 16 )
text = "Something new every day"
align = 1
valign = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Title"]
autoplay = "Wobble"
anims/RESET = SubResource( 13 )
anims/Wobble = SubResource( 14 )

[node name="Yotube" parent="." instance=ExtResource( 4 )]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -352.0
margin_top = -64.0
margin_right = -192.0
margin_bottom = -16.0
custom_fonts/font = SubResource( 17 )
text = "Youtube"

[node name="Cheat Info" type="Label" parent="."]
visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -288.0
margin_top = -352.0
margin_right = -80.0
margin_bottom = -139.0
custom_fonts/font = ExtResource( 5 )
text = "Turn this on if your browser doesn't save your progress"
align = 1
autowrap = true

[node name="Cheats" parent="." instance=ExtResource( 4 )]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -288.0
margin_top = -120.0
margin_right = -80.0
margin_bottom = -72.0
focus_mode = 2
custom_fonts/font = SubResource( 17 )
text = "Cheats: Off"

[node name="Discord" parent="." instance=ExtResource( 4 )]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -176.0
margin_top = -64.0
margin_right = -16.0
margin_bottom = -16.0
focus_mode = 2
custom_fonts/font = SubResource( 17 )
text = "Discord"

[node name="Transition" parent="." instance=ExtResource( 3 )]
visible = false
mouse_filter = 2
start_closed = true

[connection signal="timeout" from="Load" to="." method="_on_Load_timeout"]
[connection signal="button_down" from="Play" to="." method="_on_Play_button_down"]
[connection signal="button_down" from="Yotube" to="." method="_on_Yotube_button_down"]
[connection signal="button_down" from="Cheats" to="." method="_on_Cheats_button_down"]
[connection signal="button_down" from="Discord" to="." method="_on_Discord_button_down"]
